--- a/src/components/modal/styles.scss
+++ b/src/components/modal/styles.scss
@@ -1,13 +1,9 @@
 /***** <Modal> styles *****/
 :local(.modalStyles) {
-
   .modal-content {
-    // background: $modal-background-color;
     padding: 10px;
   }
-
 }
-
 
 /***** <ModalHeader> styles ******/
 :local(.modalHeaderStyles) {
@@ -18,16 +14,15 @@
       font-size: 18px;
       font-weight: bold;
       line-height: 0.6;
-      // color: $brand-primary;
       font-family: Arial, sans-serif;
     }
   }
 }
 
-
 /***** <ModalBody> styles ******/
-:local(.modalBodyStyles) { }
-
+:local(.modalBodyStyles) {
+  /* No styles for now */
+}
 
 /***** <ModalFooter> styles ******/
 :local(.modalFooterStyles) {
@@ -42,5 +37,4 @@
   .custom-modal-footer-actions {
     float: right;
   }
-
 }
