--- a/src/containers/Home/styles.scss
+++ b/src/containers/Home/styles.scss
@@ -3,7 +3,7 @@
   position: relative;
 
   .section {
-    margin-bottom: 20px;
+    margin-bottom: 80px;
 
     input {
       margin-top: 20px;
@@ -31,9 +31,38 @@
 
 :local(.demoModal3Styles) {
   .demo-modal-3 {
+    position: relative;
+
     input {
       position: relative;
       top: 8px;
+    }
+    .close {
+      position: absolute;
+      font-weight: bold;
+      right:20px;
+      top: 20px;
+      cursor: pointer;
+      width: 32px;
+      height: 32px;
+      opacity: 0.3;
+    }
+    .close:hover {
+      opacity: 1;
+    }
+    .close:before, .close:after {
+      position: absolute;
+      left: 15px;
+      content: ' ';
+      height: 20px;
+      width: 2px;
+      background-color: #333;
+    }
+    .close:before {
+      transform: rotate(45deg);
+    }
+    .close:after {
+      transform: rotate(-45deg);
     }
   }
 }
