--- a/bundle.css
+++ b/bundle.css
@@ -1,19 +1,47 @@
 .nXmHLrO4o7awIiNbdndfF {
   height: 90vh;
   position: relative; }
+  .nXmHLrO4o7awIiNbdndfF .section {
+    margin-bottom: 80px; }
+    .nXmHLrO4o7awIiNbdndfF .section input {
+      margin-top: 20px; }
   .nXmHLrO4o7awIiNbdndfF .spa-ad {
     position: absolute;
     bottom: 20px; }
-  .nXmHLrO4o7awIiNbdndfF h4 {
-    font-weight: bold;
-    margin-bottom: 20px; }
 
 .sygWzlpaSm4KNKNHx1FSM .demo-modal-1 {
   width: 1000px; }
 
-.cv-t6YF4SkACNIOOb8-_M .demo-modal-3 input {
-  position: relative;
-  top: 8px; }
+._2ydTLu5Ve_4reUXOFlydlu .demo-modal-2 {
+  width: 1000px; }
+
+.cv-t6YF4SkACNIOOb8-_M .demo-modal-3 {
+  position: relative; }
+  .cv-t6YF4SkACNIOOb8-_M .demo-modal-3 input {
+    position: relative;
+    top: 8px; }
+  .cv-t6YF4SkACNIOOb8-_M .demo-modal-3 .close {
+    position: absolute;
+    font-weight: bold;
+    right: 20px;
+    top: 20px;
+    cursor: pointer;
+    width: 32px;
+    height: 32px;
+    opacity: 0.3; }
+  .cv-t6YF4SkACNIOOb8-_M .demo-modal-3 .close:hover {
+    opacity: 1; }
+  .cv-t6YF4SkACNIOOb8-_M .demo-modal-3 .close:before, .cv-t6YF4SkACNIOOb8-_M .demo-modal-3 .close:after {
+    position: absolute;
+    left: 15px;
+    content: ' ';
+    height: 20px;
+    width: 2px;
+    background-color: #333; }
+  .cv-t6YF4SkACNIOOb8-_M .demo-modal-3 .close:before {
+    transform: rotate(45deg); }
+  .cv-t6YF4SkACNIOOb8-_M .demo-modal-3 .close:after {
+    transform: rotate(-45deg); }
 
 ._1xXQTMEGFC3pdAZxHgGzJK .demo-modal-4 input {
   position: relative;
